--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jaronwenger.github.io/TENMINUTESFROMHELL",
+  "homepage": "https://www.tenminutesfromhell.com",
   "name": "tenminutesfromhell",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "add-domain": "echo \"www.tenminutesfromhell.com\" > build/CNAME",
+    "predeploy": "npm run build && npm run add-domain",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
