--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://www.tenminutesfromhell.com",
-  "name": "tenminutesfromhell",
+  "homepage": "https://www.hiitem.com",
+  "name": "hiitem",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^12.9.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.1",
@@ -20,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "add-domain": "echo \"www.tenminutesfromhell.com\" > build/CNAME",
+    "add-domain": "echo \"www.hiitem.com\" > build/CNAME",
     "predeploy": "npm run build && npm run add-domain",
     "deploy": "gh-pages -d build"
   },
